koneksi/environment/staging/data-provenance/patches/service.yml
# Strategic merge on global/base/service/service.yml (metadata.name: base-svc)
apiVersion: v1
kind: Service
metadata:
  name: base-svc
spec:
  type: LoadBalancer
  selector:
    app: data-provenance
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
